@@ -6,14 +6,24 @@ import com.example.picknwhip_be.domain.order.entity.OrderItem;
 import com.example.picknwhip_be.domain.order.repository.OrderItemRepository;
 import com.example.picknwhip_be.domain.review.converter.ReviewConverter;
 import com.example.picknwhip_be.domain.review.dto.ReviewRow;
+import com.example.picknwhip_be.domain.review.dto.req.ReviewReqDTO;
 import com.example.picknwhip_be.domain.review.dto.res.ReviewResDTO;
 import com.example.picknwhip_be.domain.review.entity.Review;
 import com.example.picknwhip_be.domain.review.entity.mapping.ReviewSelectedKeyword;
+import com.example.picknwhip_be.domain.review.enums.ReviewSort;
+import com.example.picknwhip_be.domain.review.exception.ReviewException;
+import com.example.picknwhip_be.domain.review.exception.code.ReviewErrorCode;
 import com.example.picknwhip_be.domain.review.repository.ReviewLikeRepository;
 import com.example.picknwhip_be.domain.review.repository.ReviewRepository;
 import com.example.picknwhip_be.domain.review.repository.ReviewSelectedKeywordRepository;
+import com.example.picknwhip_be.domain.review.service.query.cursor.ReviewCursor;
+import com.example.picknwhip_be.domain.review.service.query.cursor.ReviewCursorCodec;
 import com.example.picknwhip_be.domain.shop.entity.enums.OptionCategory;
+import com.example.picknwhip_be.domain.shop.exception.ShopException;
+import com.example.picknwhip_be.domain.shop.exception.code.ShopErrorCode;
+import com.example.picknwhip_be.domain.shop.repository.ShopRepository;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.*;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
@@ -27,10 +37,12 @@ public class ReviewQueryServiceImpl implements ReviewQueryService {
   private final OrderItemRepository orderItemRepository;
   private final ReviewSelectedKeywordRepository reviewSelectedKeywordRepository;
   private final ReviewLikeRepository reviewLikeRepository;
+  private final ReviewCursorCodec cursorCodec;
+  private final ShopRepository shopRepository;
 
   @Override
   public ReviewResDTO.MyReviewListDTO getMyReviewList(Long cursor, int size, Long userId) {
-    ReviewRow.MyReviewSummaryRow summary = reviewRepository.fetchMyReviewSummary(userId);
+    ReviewRow.ReviewSummaryRow summary = reviewRepository.fetchMyReviewSummary(userId);
     long count = (summary == null) ? 0L : summary.count();
     double avgRating = roundTo1Decimal(summary == null ? null : summary.averageRating());
 
@@ -42,7 +54,7 @@ public class ReviewQueryServiceImpl implements ReviewQueryService {
 
     Long nextCursor = null;
     if (hasNext && !pageRows.isEmpty()) {
-      nextCursor = pageRows.get(pageRows.size() - 1).reviewId();
+      nextCursor = pageRows.getLast().reviewId();
     }
 
     List<Long> reviewIds = pageRows.stream().map(ReviewRow.MyReviewRow::reviewId).toList();
@@ -60,6 +72,9 @@ public class ReviewQueryServiceImpl implements ReviewQueryService {
   @Override
   public ReviewResDTO.ReviewDetailDTO getReviewDetail(Long reviewId) {
     ReviewRow.ReviewDetailRow review = reviewRepository.fetchReviewDetail(reviewId);
+    if (review == null) {
+      throw new ReviewException(ReviewErrorCode.REVIEW_NOT_FOUND);
+    }
     List<ReviewRow.KeywordRow> keywordRows = reviewRepository.fetchReviewDetailKeywords(reviewId);
     List<ReviewRow.MyReviewImageRow> imageRows =
         reviewRepository.fetchMyReviewImages(List.of(reviewId));
@@ -78,6 +93,78 @@ public class ReviewQueryServiceImpl implements ReviewQueryService {
         review.nickname(),
         review.profileUrl(),
         keywords);
+  }
+
+  @Override
+  public ReviewResDTO.ShopReviewListDTO searchShopReviews(
+      Long shopId, ReviewReqDTO.ShopReviewListDTO dto, Long userId) {
+    if (!shopRepository.existsById(shopId)) {
+      throw new ShopException(ShopErrorCode.SHOP_NOT_FOUND);
+    }
+
+    ReviewSort sort = dto.sort() != null ? dto.sort() : ReviewSort.LATEST;
+    int size = dto.size() != null ? dto.size() : 20;
+
+    ReviewCursor cursor;
+    try {
+      cursor = cursorCodec.decode(sort, dto.cursor());
+    } catch (IllegalArgumentException | DateTimeParseException e) {
+      throw new ReviewException(ReviewErrorCode.INVALID_CURSOR);
+    }
+
+    int limit = size + 1;
+
+    List<ReviewRow.ShopReviewRow> rows =
+        reviewRepository.fetchShopReviewRows(
+            shopId, sort, dto.designIds(), dto.styles(), cursor, limit);
+
+    boolean hasNext = rows.size() > size;
+    List<ReviewRow.ShopReviewRow> page = hasNext ? rows.subList(0, size) : rows;
+
+    String nextCursor = null;
+    if (hasNext && !page.isEmpty()) {
+      ReviewRow.ShopReviewRow last = page.getLast();
+      nextCursor = cursorCodec.encode(sort, ReviewCursor.fromRow(sort, last));
+    }
+
+    List<Long> reviewIds = page.stream().map(ReviewRow.ShopReviewRow::reviewId).toList();
+
+    // 배치 조회: 이미지, 키워드, 좋아요 여부
+    List<ReviewRow.MyReviewImageRow> imageRows = reviewRepository.fetchMyReviewImages(reviewIds);
+    Map<Long, List<String>> imageUrlsByReviewId = groupImageUrlsByReviewId(imageRows);
+
+    List<ReviewRow.KeywordRow> keywordRows = reviewRepository.fetchReviewKeywords(reviewIds);
+    Map<Long, List<ReviewResDTO.KeywordDTO>> keywordsByReviewId =
+        keywordRows.stream()
+            .collect(
+                Collectors.groupingBy(
+                    ReviewRow.KeywordRow::reviewId,
+                    Collectors.mapping(
+                        k -> new ReviewResDTO.KeywordDTO(k.code(), k.label()),
+                        Collectors.toList())));
+
+    Set<Long> likedReviewIds = reviewRepository.fetchLikedReviewIds(userId, reviewIds);
+
+    return ReviewConverter.toShopReviewListDTO(
+        page, imageUrlsByReviewId, keywordsByReviewId, likedReviewIds, nextCursor, hasNext);
+  }
+
+  @Override
+  public ReviewResDTO.ShopReviewSummaryDTO searchShopReviewSummary(Long shopId) {
+    if (!shopRepository.existsById(shopId)) {
+      throw new ShopException(ShopErrorCode.SHOP_NOT_FOUND);
+    }
+
+    ReviewRow.ReviewSummaryRow summary = reviewRepository.fetchShopReviewSummary(shopId);
+    double rating = roundTo1Decimal(summary == null ? null : summary.averageRating());
+    int count = summary == null ? 0 : (int) summary.count();
+
+    List<ReviewRow.KeywordCategoryCountRow> categoryCounts = Collections.emptyList();
+    if (count > 0) {
+      categoryCounts = reviewRepository.fetchShopKeywordCategoryCounts(shopId);
+    }
+
+    return ReviewConverter.toShopReviewSummaryDTO(rating, count, categoryCounts);
   }
 
   @Override
